--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 
 
     <body>
+        <h1>CFlexHDL slides:</h1>
+		<br>
+
 <script async class="speakerdeck-embed" data-id="2a8db348c8e941b9b3d093364e809f5d" data-ratio="1.77849462365591" src="https://speakerdeck.com/assets/embed.js"></script>
-
-        <h1>Hello World!</h1>
-
-<a href="https://speakerdeck.com/suarezvictor/cflexhdl">CFlexHDL presentation</a>
 
     </body>
 
