cflexhdl: fix slides embed page

--- a/cflexhdl/slides.html
+++ b/cflexhdl/slides.html
@@ -3,14 +3,11 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Victor Suarez Rovere's GitHub Page</title>
+        <title>CFlexHDL: Design your hardware in C - Slides</title>
     </head>
 
 
     <body>
-        <h1>CFlexHDL slides:</h1>
-		<br>
-
 <script async class="speakerdeck-embed" data-id="2a8db348c8e941b9b3d093364e809f5d" data-ratio="1.77849462365591" src="https://speakerdeck.com/assets/embed.js"></script>
 
     </body>
