--- a/cflexhdl/gpu2d.html
+++ b/cflexhdl/gpu2d.html
@@ -1,1 +1,11 @@
-GPU 2D
+<!doctype html>
+<html>
+<head>
+<title>2D graphics accellerator</title>
+</head>
+<body>
+A triangle rasterizer was implemented with high quality antialiasing, based on analytical prefiltering technique. Each pixel is evaluated just once<br>
+<img src="antialiased%20triangles.png">
+</body>
+</html>
+
