--- a/cflexhdl/gpu2d.html
+++ b/cflexhdl/gpu2d.html
@@ -4,6 +4,18 @@
 <title>2D graphics accellerator</title>
 </head>
 <body>
+Video of an alpha-blended rectangle rasterizer, implemented in a FPGA using CflexHDL for C to Verilog translation<br>
+
+<iframe
+ width="720"
+ height="576"
+ src="https://www.youtube.com/embed/rygcdnJC88A"
+ title="CflexHDL alpha-blended rectangle fill accelerator"
+ frameborder="0"
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+ allowfullscreen>
+</iframe>
+  
 A triangle rasterizer was implemented with high quality antialiasing, based on analytical prefiltering technique. Each pixel is evaluated just once<br>
 <img src="antialiased%20triangles.png">
 </body>
