--- a/cflexhdl/gpu2d.html
+++ b/cflexhdl/gpu2d.html
@@ -15,8 +15,8 @@
   </style>
 </head>
 <body>
-<h1 id="hardware-accellerated-2d-graphics-server-using-c-to-verilog-tool">Hardware accellerated 2D graphics server using C-to-Verilog tool</h1>
-
+<h1 id="hardware-accelerated-2d-graphics-server-using-c-to-verilog-tool">Hardware accelerated 2D graphics server using C-to-Verilog tool</h1>
+<p>
 <iframe
  width="720"
  height="576"
@@ -26,8 +26,8 @@
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
  allowfullscreen>
 </iframe>
-<br>
-News: development of the hardware acellerated graphics cores funded by <a href="nlnet.nl">Nlnet Foundation<a><br>
+<br />
+News: development of the hardware accelerated graphics project funded by <a href="nlnet.nl">Nlnet Foundation</a></p>
 <h2 id="introduction">Introduction</h2>
 <p>This project aims to provide a graphics server system based on hardware accelerated graphics, and a easy way to develop the graphics primitives. The accelerated versions runs faster using the exact same C code as the software version by automatic translation (<em>transpiling</em>) to Verilog code using a custom tool: <a href="https://github.com/suarezvictor/CflexHDL">https://github.com/suarezvictor/CflexHDL</a>.</p>
 <p>As an example, let’s see how to use and develop drawing privimites for solid rectangles and ellipses.</p>
