--- a/cflexhdl/gpu2d.html
+++ b/cflexhdl/gpu2d.html
@@ -111,5 +111,7 @@ while(!regs-&gt;done); //wait until done</code></pre>
 <p>A <em>clock demo</em> application is shown, using a combination of drawn rectangles and ellipses.</p>
 <p><img src=clock.png width=640 height=480></img></p>
 <p>The code for that demo application can be compiled with the main simulator code on the host machine (e.g. Linux) to see results on the simulator window. This eases testing while in development since the program compiles in few seconds, then it can be run on the hardware platform to check if producing the same results. In the provided video, you can see that the hardware matches the simulator.</p>
+  <h1>Sources</h1>
+  https://github.com/suarezvictor/suarezvictor.github.io/releases/tag/nlnet
 </body>
 </html>
